--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
 
-            android:name=".ui.dashboard.watchHistory"
+            android:name=".watchHistory"
             android:exported="true"
             android:label="@string/title_activity_watch_history"
             android:theme="@style/Theme.MyApplication.NoActionBar"
@@ -40,5 +40,11 @@
             android:exported="true"
             android:label="@string/app_name">
         </activity>
+        <service android:name=".PushNotificationService" android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"></action>
+            </intent-filter>
+        </service>
     </application>
+
 </manifest>
