--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,7 @@
 
         <activity
 
-            android:name=".watchHistory"
-            android:exported="true"
-            android:label="@string/title_activity_watch_history"
-            android:theme="@style/Theme.MyApplication.NoActionBar"
-            />
-        <activity
-
-            android:name=".ui.dashboard.calendar"
+            android:name=".calendar"
             android:exported="true"
 
             />
